# edms-ai-assistant

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  alembic.ini  build.ps1  docker-compose.override.yml  docker-compose.yml  guide.md  licenses.csv  main.py  pyproject.toml  requirements.txt
docker/: entrypoint.sh
e_a_a/core/: orchestrator.py  sub_agents.py
e_a_a/infrastructure/api_clients/: attachment_client.py  document_client.py  employee_client.py
e_a_a/services/: edms_service.py
e_a_a/sub_agents/: documents_agent.py  employees_agent.py  general_agent.py  tasks_agent.py
e_a_a/tools/: attachment.py  document.py  employee.py
edms-ai-plugin/: .parcelrc  README.md  background.ts  env.d.ts  next.config.mjs  options.tsx  package-lock.json  package.json  popup.tsx  style.css  tailwind.config.js  tsconfig.json
edms-ai-plugin/contents/: appeal-autofill.tsx  attachment-actions.tsx  index.tsx  magic-wand.tsx
edms-ai-plugin/features/: AssistantWidget.tsx  ChatMessage.tsx  ConfirmDialog.tsx  LiquidGlassFilter.tsx  ParticleEffect.tsx
edms-ai-plugin/public/: background.js  content.css  content.js  manifest.json
edms-ai-plugin/scripts/: build-extension.js
edms-ai-plugin/src/app/: globals.css  layout.tsx  page.tsx
edms-ai-plugin/src/types/: chrome.d.ts
edms-ai-plugin/utils/: edms-helpers.ts
edms-plugin/: .gitignore  env.d.ts  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  wxt.config.ts
edms-plugin/.output/chrome-mv3/: background.js  manifest.json  popup.html
edms-plugin/.wxt/types/: paths.d.ts
edms-plugin/src/entrypoints/: background.ts
edms-plugin/src/types/: interrupt.ts  speech.d.ts
edms_ai_assistant/: __init__.py  agent.py  agent_components.py  agent_config.py  app.py  cli.py  compliance_extractor.py  config.py  constants.py  content_sanitizer.py  docker-compose.prod.yml  dockerfile  graph.py  guardrails.py  interactive_status_detector.py  llm.py  main.py  memory.py  model.py  models.py  navigate_url_extractor.py  nodes.py  observability.py  resilience.py  response_assembler.py  response_protocols.py  router_planner.py  security.py  semantic_cache.py  tool_args_patcher.py  tool_call_guard.py  tool_call_patch_pipeline.py  tool_call_router.py  tools.py
edms_ai_assistant/agent/: __init__.py  agent.py  content_extractor.py  context.py  escaping.py  graph.py  hitl_primitives.py  interrupt_contract.py  messages_utils.py  orchestrator.py  prompts.py  repositories.py  runnable_utils.py  state_manager.py  tool_injector.py  ui_directive.py
edms_ai_assistant/agent/extraction/: content_extractor.py
edms_ai_assistant/agent/orchestration/: __init__.py  hitl.py  loop.py  response_builder.py  sanitizer.py  (+1 more)
edms_ai_assistant/api/: __init__.py  deps.py  helpers.py  sse.py  sse_events.py
edms_ai_assistant/clients/: __init__.py  access_grief_client.py  acting_officer_client.py  attachment_client.py  base_client.py  bpmn_client.py  control_client.py  correspondent_client.py  department_client.py  document_client.py  document_creator_client.py  document_process_client.py  document_profile_client.py  employee_client.py  group_client.py  permission_client.py  redis_client.py  reference_client.py  report_client.py  task_client.py  transport.py
edms_ai_assistant/core/: __init__.py  dependencies.py  deps.py  di_container.py  distributed_lock.py  exceptions.py  orchestrator.py  redis_circuit.py  sub_agents.py
edms_ai_assistant/db/: database.py  postgres.py
edms_ai_assistant/domain/: __init__.py  appeal_fields.py  base.py  document.py  employee.py  enums.py  reference.py  report.py  search.py  system.py  task_models.py
edms_ai_assistant/models/: appeal_fields.py  orchestrator_models.py  task_models.py
edms_ai_assistant/observability/: tracing.py
edms_ai_assistant/schemas/: __init__.py  cache.py  summarization.py
edms_ai_assistant/scripts/: download_openapi.py
edms_ai_assistant/services/: appeal_autofill_service.py  appeal_extraction_service.py  document_enricher.py  document_service.py  edms_service.py  entity_extractor.py  file_processor.py  introduction_service.py  nlp_service.py  query_refiner.py  rate_limiter.py  resolution_service.py  search_utils.py  subject_service.py  summarization_orchestrator.py  summarize_service.py  task_service.py
edms_ai_assistant/sub_agents/: documents_agent.py  employees_agent.py  general_agent.py  tasks_agent.py
edms_ai_assistant/summarizer/: README.md  __init__.py  config.py  container.py  errors.py  service.py
edms_ai_assistant/tools/: __init__.py  access_grief_tool.py  acting_officer.py  appeal_autofill.py  ask_user_select.py  attachment.py  base.py  correspondent_tool.py  create_document_from_file.py  doc_compliance_check.py  doc_control.py  doc_next_process.py  doc_notification.py  doc_process_action.py  doc_resolution.py  doc_search.py  doc_update_field.py  document.py  document_attachment.py  document_comparison.py  document_metadata.py  document_tools.py  document_versions.py  employee.py  employee_search.py  employee_tools.py  file_compare_tool.py  introduction.py  local_file_tool.py  report_tool.py  router.py  summarization.py  task.py  update_settings.py
edms_ai_assistant/utils/: __init__.py  api_utils.py  api_utilss.py  async_utils.py  datetime_utils.py  edms_formatter.py  file_utils.py  format_utils.py  hash_utils.py  json_encoder.py  regex_utils.py  retry_utils.py  retry_utilss.py  token_counter.py
migrations/: env.py
migrations/versions/: 001_create_summarization_cache.py
test/: AgentType.py  debug_server.py  diagnose_timezone.py  ollama_test.py  test_agent.py  test_config_check.py  test_datetime_serialization.py  test_embeddings.py  test_llm_invoke.py  test_orchestrator_scenarios.py  test_task_creation.py
tests/: test_appeal_service.py  test_document_service.py  test_embeddings.py  test_initialization.py  test_llm_invoke.py  test_report_client.py  test_security_jwt.py  test_services.py  test_workflow_tools.py
tests/agent/: t.txt  test_agent_integration.py  test_content_extractor.py  test_context.py  test_hitl.py  test_states.py
(+106 files in other folders)
