[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edms-ai-assistant"
version = "0.1.0"
description = "AI-Powered EDMS Task Automation Assistant."
authors = [{ name = "edms", email = "you@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.12.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=1.1.2,<2.0.0",
    "langchain-community>=0.4.1,<1.0.0",
    "langchain-core>=1.1.1,<2.0.0",
    "langchain-experimental>=0.4.0,<0.5.0",
    "langchain-openai>=1.1.0,<1.2.0",
    "langgraph>=1.0.4,<2.0.0",
    "langgraph-prebuilt>=1.0.5,<2.0.0",
    "langgraph-checkpoint-postgres>=3.0.1,<4.0.0",
    "chains>=1.0,<2.0.",
    "fastapi>=0.123.9,<0.124.0",
    "uvicorn[standard]>=0.38.0,<0.39.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pypdf2>=3.0.1,<3.1.0",
    "requests>=2.32.5,<3.0.0",
    "tiktoken>=0.12.0,<0.13.0",
    "typing-extensions>=4.15.0,<5.0.0",
    "pymupdf>=1.26.6,<2.0.0",
    "chromadb>=1.3.5,<2.0.0",
    "python-multipart>=0.0.20,<0.1.0",
    "pyjwt[crypto]>=2.10.1,<3.0.0",
    "redis>=7.1.0,<8.0.0",
    "psycopg[binary]>=3.3.1,<4.0.0",
    "sqlalchemy>=2.0.44,<3.0.0",
    "anyio>=4.12.0,<5.0.0",
    "httpx>=0.28.1,<0.30.0",
#    "datamodel-code-generato>=0.42.0,<0.50.0",
    "jsonpath_ng>=1.7.0,<2.0.0",
    "docx2txt>=0.9,<0.10",
    "memory>=1.0.0,<2.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "docx>=0.2.4,<0.3.0",
    "aiofiles>=25.1.0,<26.0.0",
    "command>=0.1.0,<0.2.0",
    "torch>=2.9.1,<3.0.0",
    "unstructured_inference>=1.1.2,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.0,<2.0.0",
    "black>=25.11.0,<26.0.0",
    "pytest>=9.0.1,<10.0.0",
    "ruff>=0.14.8,<0.15.0",
    # "pytest-asyncio>=0.21.0",
    # "pytest-cov>=4.0.0",
    # "types-requests>=2.31.0.0",
]

[project.urls]
Homepage = "https://github.com/VabGen/edms-ai-assistant"
Repository = "https://github.com/VabGen/edms-ai-assistant"

# --- CLI Scripts Section ---
[project.scripts]
# Определяем команду 'edms-assistant', которая будет вызывать функцию main из edms_ai_assistant.cli
edms-assistant = "edms_ai_assistant.cli:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

# [tool.pytest.ini_options]
# asyncio_mode = "auto"
# testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["edms_ai_assistant*"]
